# GarmentImage

./: .gitignore  README.md  decode.py  encode.py  main.py  pyproject.toml
assets/: dress_0XAVEH5G53_specification.json  dress_0ZLTWH7ZG8.npy  jumpsuit_sleeveless_0C9A7U6789_specification.json  rand_CFG7B8V834_specification.json  rand_D6DY6QD2ZV_specification.json
garmentimage/utils/: decoder.py  draw_panel.py  edge2d.py  embedding.py  encoder.py  errors.py  face.py  file.py  line2d.py  mesh.py  neural_tailor_converter.py  piece.py  seam.py  template.py  template_panel.py  template_piece.py  utils.py  utils2d.py  utils_2d.py  vector2.py  vertex2d.py
